--- a/index.html
+++ b/index.html
@@ -82,5 +82,19 @@ src="https://www.facebook.com/tr?id=928957258822891&ev=PageView&noscript=1"
             <p class="text-sm text-gray-300">&copy; 2024 Sachin Cricket Tips | Powered by <span class="text-yellow-400 font-semibold">Sachin Cricket Tips</span></p>
         </footer>
     </main>
+    <script>
+    document.addEventListener('contextmenu', function (e) {
+    e.preventDefault(); // Prevent the default right-click menu
+    alert('Right-click is disabled on this webpage.');
+});
+
+document.addEventListener("keydown", function(event) {
+        // Check if Ctrl key is pressed along with 'U'
+        if (event.ctrlKey && event.key === "u") {
+            event.preventDefault(); // Prevent the default action
+            alert("View source is disabled!"); // Optional alert message
+        }
+    });
+</script>
 </body>
 </html>
