--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@ src="https://www.facebook.com/tr?id=589851347074151&ev=PageView&noscript=1"
         </div>
 
 
-        <footer class="mt-12 text-center">
+<!--         <footer class="mt-12 text-center">
             <p class="text-sm text-gray-300">&copy; 2024 Sachin Cricket Tips | Powered by <span class="text-yellow-400 font-semibold">Sachin Cricket Tips</span></p>
-        </footer>
+        </footer> -->
     </main>
+    <footer style="position: absolute;bottom: 0; background-color: rgb(255, 255, 255); width: 100%; text-align: center; text-transform: uppercase;  "><a href="https://t.me/digitalranjan24" style="color: black; text-decoration: none;">  Advertisment By <strong style="color: blue; text-decoration:underline; text-transform: none;"> DigitalRanjan </strong></a></footer>
+
     <script>
     document.addEventListener('contextmenu', function (e) {
     e.preventDefault(); // Prevent the default right-click menu
